--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 fastapi = "^0.109.0"
 uvicorn = "^0.26.0"
+sqlalchemy = "^2.0.25"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
