--- a/client/cli/Cargo.toml
+++ b/client/cli/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "hi-client"
+name = "hictl"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+tokio = "1.35.1"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
