--- a/client/lib/Cargo.toml
+++ b/client/lib/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "hi-lib"
+name = "hilib"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dmidecode-rs = "0.2.2"
+reqwest = "0.11.23"
+serde = "1.0.195"
+tokio = "1.35.1"
