--- a/client/lib/Cargo.toml
+++ b/client/lib/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 dmidecode-rs = "0.2.2"
-reqwest = "0.11.23"
-serde = "1.0.195"
+reqwest = { version = "0.11.23", features = ["json"] }
+serde = { version = "1.0.195", features = ["derive"] }
+smbios-lib = "0.9.1"
 tokio = "1.35.1"
