CLI now also compiles

--- a/client/hictl/Cargo.toml
+++ b/client/hictl/Cargo.toml
@@ -3,7 +3,8 @@ name = "hictl"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
-tokio = "1.35.1"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+hilib = { path = "../hilib" }
