--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 fastapi = "^0.109.0"
 uvicorn = "^0.26.0"
 sqlalchemy = "^2.0.25"
+pydantic = "^2.5.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
