Remove the other features

--- a/client/hictl/Cargo.toml
+++ b/client/hictl/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "full"] }
+tokio = { version = "1.35.1", features = ["full"] }
 hilib = { path = "../hilib", version = "0.1.0" }
