--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hilib"
+name = "hwlib"
 description = "collects and sends hardware information to hi-api to find testing status of the device model"
 license = "GPL-3.0-only"
 version = "0.1.0"
