--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - uses: Gr1N/setup-poetry@v8
+      - uses: Gr1N/setup-poetry@12c727a3dcf8c1a548d8d041c9d5ef5cebb3ba2e
         with:
           poetry-version: "1.6.1"
       - run: poetry install
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - uses: Gr1N/setup-poetry@v8
+      - uses: Gr1N/setup-poetry@12c727a3dcf8c1a548d8d041c9d5ef5cebb3ba2e
         with:
           poetry-version: "1.6.1"
       - run: poetry install
