Use v1 for openapi.yaml URL

--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -42,7 +42,7 @@ jobs:
         shell: bash
 
       - name: Fetch OpenAPI YAML
-        run: curl http://localhost:8001/openapi.yaml -o fetched_openapi.yaml
+        run: curl http://localhost:8001/v1/openapi.yaml -o fetched_openapi.yaml
 
       - name: Compare with repository's openapi.yaml
         run: diff fetched_openapi.yaml openapi.yaml
