--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
 repos:
 -   repo: local
     hooks:
-    -   id: openapi-fetch
-        name: Fetch OpenAPI YAML
-        entry: scripts/fetch_openapi.sh
-        language: script
-        always_run: true
-        pass_filenames: false
+    - id: openapi-fetch
+      name: Fetch OpenAPI YAML and HTML
+      entry: scripts/fetch_openapi.sh
+      language: script
+      always_run: true
+      pass_filenames: false
