--- a/.github/workflows/openapi_gh_pages.yaml
+++ b/.github/workflows/openapi_gh_pages.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: '20.x'
       - run: mkdir -p dist
-      - run: npx @redocly/cli build-docs ./openapi.yaml -o ./dist/index.html
+      - run: npx @redocly/cli build-docs ./schemas/openapi.yaml -o ./dist/index.html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
