--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hwlib"
-description = "collects and sends hardware information to hi-api to find testing status of the device model"
+description = "collects and sends hardware information to hwapi to find testing status of the device model"
 license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
@@ -9,6 +9,6 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.11.23", features = ["json"] }
-serde = { version = "1.0.195", features = ["derive"] }
+serde = { version = "1.0.196", features = ["derive"] }
 smbios-lib = "0.9.1"
 tokio = "1.35.1"
