--- a/.github/workflows/test_client_lib.yaml
+++ b/.github/workflows/test_client_lib.yaml
@@ -13,6 +13,10 @@ jobs:
         working-directory: client/hwlib
     steps:
       - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libssl-dev
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
