--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -1,4 +1,4 @@
-name: Test hwlib
+name: Test client lib and CLI tool
 on: [push]
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -10,7 +10,7 @@ jobs:
     runs-on: [self-hosted, linux, large]
     defaults:
       run:
-        working-directory: client/hwlib
+        working-directory: client
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
@@ -25,13 +25,6 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: check
-      - run: rustup component add rustfmt
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-      - uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
-          name: Clippy Output
+          - run: rustup component add rustfmt
+      - run: cargo fmt --all -- --check
+      - run: cargo clippy --all-features --verbose
