--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -22,9 +22,8 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: check
-          - run: rustup component add rustfmt
+      - run: cargo check
+      - run: rustup component add rustfmt
       - run: cargo fmt --all -- --check
+      - run: rustup component add clippy
       - run: cargo clippy --all-features --verbose
