--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hwlib"
-description = "collects and sends hardware information to hi-api to find testing status of the device model"
+description = "collects and sends hardware information to hwapi to find testing status of the device model"
 license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
@@ -8,7 +8,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11.23", features = ["json"] }
-serde = { version = "1.0.195", features = ["derive"] }
+rand = "0.8.5"
+reqwest = { version = "0.11.24", features = ["json"] }
+serde = { version = "1.0.196", features = ["derive"] }
 smbios-lib = "0.9.1"
 tokio = "1.35.1"
