--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -12,4 +12,6 @@ rand = "0.8.5"
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
 smbios-lib = "0.9.1"
-tokio = "1.35.1"
+tokio = { version = "1.35.1", features = ["full"] }
+pyo3 = { version = "0.14", features = ["extension-module"] }
+serde_json = "1.0.113"
