--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -15,3 +15,4 @@ smbios-lib = "0.9.1"
 tokio = { version = "1.35.1", features = ["full"] }
 pyo3 = { version = "0.14", features = ["extension-module"] }
 serde_json = "1.0.113"
+once_cell = "1.19.0"
