--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -12,7 +12,7 @@ rand = "0.8.5"
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
 smbios-lib = "0.9.1"
-tokio = { version = "1.35.1", features = ["full"] }
+tokio = { version = "1.35.1", features = ["full", "test-util"] }
 pyo3 = { version = "0.14", features = ["extension-module"] }
 serde_json = "1.0.113"
 once_cell = "1.19.0"
