--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -26,3 +26,23 @@ jobs:
       - run: cargo clippy --all-features --verbose
       - name: Run cargo test
         run: cargo test -- --test-threads=1
+
+  py-bindings-test:
+    runs-on: [self-hosted, linux, large]
+    - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libssl-dev
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        override: true
+    - uses: actions/setup-python@v5
+    - run: pip install black pytest maturin
+    - name: Check tests style with black
+      run: black --check client/hwlib/pytests/
+    - name: Prepare the Rust lib with Python bindings
+      run: cd client/hwlib && maturin develop
+    - run: pytest pytests/
