--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -29,12 +29,13 @@ jobs:
 
   py-bindings-test:
     runs-on: [self-hosted, linux, large]
+    needs: lint-and-test
     steps:
       - uses: actions/checkout@v4
-        - name: Install dependencies
-          run: |
-            sudo apt-get update
-            sudo apt-get install -y pkg-config libssl-dev
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libssl-dev
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
