--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -35,14 +35,14 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev python3-venv
+          sudo apt-get install -y pkg-config libssl-dev
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
       - uses: actions/setup-python@v5
-      - run: pip install black pytest maturin
+      - run: pip install black pytest maturin virtualenv
       - name: Check tests style with black
         run: black --check client/hwlib/pytests/
       - name: Prepare the Rust lib with Python bindings
