--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -44,19 +44,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Create virtual environment
-        run: python -m venv venv
-      - name: Install Python dependencies
+      - name: Install tox
         run: |
-          ./venv/bin/pip install black pytest maturin virtualenv
-      - name: Check tests style with black
-        run: ./venv/bin/black --check client/hwlib/pytests/
-      - name: Build the Rust lib with Python bindings
-        run: |
-          source venv/bin/activate
-          cd client/hwlib/
-          maturin develop
-      - name: Run pytest
+          pip install tox
+      - name: Run tox
         run: |
           cd client/hwlib/
-          ../../venv/bin/pytest pytests/
+          tox
