--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -6,7 +6,7 @@ concurrency:
 
 
 jobs:
-  linting:
+  lint-and-test:
     runs-on: [self-hosted, linux, large]
     steps:
       - uses: actions/checkout@v4
@@ -24,3 +24,30 @@ jobs:
       - run: cargo fmt --all -- --check
       - run: rustup component add clippy
       - run: cargo clippy --all-features --verbose
+      - name: Run cargo test
+        run: cargo test -- --test-threads=1
+
+  py-bindings-test:
+    runs-on: [self-hosted, linux, large]
+    needs: lint-and-test
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libssl-dev
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: Install tox
+        run: |
+          pip install tox
+      - name: Run tox
+        run: |
+          cd client/hwlib/
+          tox
