--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -5,7 +5,9 @@ license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package.metadata.deb]
+maintainer = "Canonical Ltd."
+copyright = "Canonical Ltd."
 
 [dependencies]
 rand = "0.8.5"
@@ -17,3 +19,7 @@ serde_json = "1.0.113"
 once_cell = "1.19.0"
 pyo3 = { version = "0.20", features = ["extension-module"] }
 pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
+
+[lib]
+name = "hwlib"
+crate-type = ["cdylib", "rlib"]
