--- a/client/debian/control
+++ b/client/debian/control
@@ -1,17 +1,23 @@
 Source: hwlib
+Section: rust
 Priority: optional
 Maintainer: Canonical Ltd.
-Build-Depends: debhelper-compat (= 13)
-               rustc (>= 1.40),
-               cargo,
-               python3-dev,
-               python3-setuptools,
-               libssl-dev
-Standards-Version: 4.6.0
-Section: libs
+Build-Depends: debhelper (>= 12),
+ dh-cargo (>= 25),
+ cargo:native <!nocheck>,
+ rustc:native <!nocheck>,
+ libstd-rust-dev <!nocheck>,
+ librust-dmidecode-rs-0.2+default-dev (>= 0.2.2-~~) <!nocheck>,
+ librust-reqwest-0.11+default-dev (>= 0.11.23-~~) <!nocheck>,
+ librust-reqwest-0.11+json-dev (>= 0.11.23-~~) <!nocheck>,
+ librust-serde-1+default-dev (>= 1.0.195-~~) <!nocheck>,
+ librust-serde-1+derive-dev (>= 1.0.195-~~) <!nocheck>,
+ librust-smbios-lib-0.9+default-dev (>= 0.9.1-~~) <!nocheck>,
+ librust-tokio-1+default-dev (>= 1.35.1-~~) <!nocheck>
+Standards-Version: 4.6.1
 Homepage: https://github.com/canonical/hardware-api
-Vcs-Browser: https://github.com/canonical/hardware-api
-Vcs-Git: https://github.com/canonical/hardware-api.git
+Vcs-Git: https://github.com/canonical/hardware-api.git [client/hwlib/src]
+Vcs-Browser: https://github.com/canonical/hardware-api/tree/main/client/hwlib/src
 Rules-Requires-Root: no
 
 Package: hwlib
@@ -23,6 +29,24 @@ Description: Library for retrieving hardware information.
 Package: hwlib-dev
 Section: libdevel
 Architecture: any
-Depends: hwlib (= ${binary:Version}), ${misc:Depends}
+Multi-Arch: same
+Depends:
+ ${misc:Depends},
+ librust-dmidecode-rs-0.2+default-dev (>= 0.2.2-~~),
+ librust-reqwest-0.11+default-dev (>= 0.11.23-~~),
+ librust-reqwest-0.11+json-dev (>= 0.11.23-~~),
+ librust-serde-1+default-dev (>= 1.0.195-~~),
+ librust-serde-1+derive-dev (>= 1.0.195-~~),
+ librust-smbios-lib-0.9+default-dev (>= 0.9.1-~~),
+ librust-tokio-1+default-dev (>= 1.35.1-~~)
+Provides:
+ hwlib+default-dev (= ${binary:Version}),
+ hwlib-0-dev (= ${binary:Version}),
+ hwlib-0+default-dev (= ${binary:Version}),
+ hwlib-0.1-dev (= ${binary:Version}),
+ hwlib-0.1+default-dev (= ${binary:Version}),
+ hwlib-0.1.0-dev (= ${binary:Version}),
+ hwlib-0.1.0+default-dev (= ${binary:Version})
+
 Description: Development files for hwlib.
  Contains headers and other necessary files for developing applications that use hwlib.
