--- a/client/hwlib/debian/rules
+++ b/client/hwlib/debian/rules
@@ -2,5 +2,5 @@
 %:
 	dh $@ --buildsystem cargo
 
-override_dh_auto_test:
-	dh_auto_test -- test --all
+#override_dh_auto_test:
+#	dh_auto_test -- test --all
