--- a/client/hwlib/debian/control
+++ b/client/hwlib/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 12),
  cargo:native,
  rustc:native,
  libstd-rust-dev,
+ pipx,
  librust-dmidecode-rs-0.2+default-dev (>= 0.2.2-~~),
  librust-reqwest-0.11+default-dev (>= 0.11.23-~~),
  librust-reqwest-0.11+json-dev (>= 0.11.23-~~),
@@ -13,7 +14,8 @@ Build-Depends: debhelper (>= 12),
  librust-serde-1+derive-dev (>= 1.0.195-~~),
  librust-smbios-lib-0.9+default-dev (>= 0.9.1-~~),
  librust-tokio-1+default-dev (>= 1.35.1-~~),
- librust-once-cell-1-dev (>= 1.18.0-~~)
+ librust-once-cell-1-dev (>= 1.18.0-~~),
+ librust-pyo3-dev (>= 0.19.0-3-~~)
 Maintainer: Debian Rust Maintainers <pkg-rust-maintainers@alioth-lists.debian.net>
 Standards-Version: 4.6.1
 Vcs-Git: https://github.com/canonical/hardware-api.git [client/hwlib/src]
@@ -35,7 +37,8 @@ Depends:
  librust-serde-1+derive-dev (>= 1.0.195-~~),
  librust-smbios-lib-0.9+default-dev (>= 0.9.1-~~),
  librust-tokio-1+default-dev (>= 1.35.1-~~),
- librust-once-cell-1-dev (>= 1.18.0-~~)
+ librust-once-cell-1-dev (>= 1.18.0-~~),
+ librust-pyo3-dev (0.19.0-3)
 Provides:
  hwlib+default-dev (= ${binary:Version}),
  hwlib-0-dev (= ${binary:Version}),
