--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -6,8 +6,8 @@ version = "0.1.0"
 edition = "2021"
 
 [package.metadata.deb]
-maintainer = "Canonical Ltd."
-copyright = "Canonical Ltd."
+maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
+copyright = "Copyright 2024 Canonical Ltd."
 
 [dependencies]
 rand = "0.8.5"
