--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -10,15 +10,12 @@ maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpa
 copyright = "Copyright 2024 Canonical Ltd."
 
 [dependencies]
-rand = "0.8.5"
-reqwest = { version = "0.11.24", features = ["json"] }
-serde = { version = "1.0.196", features = ["derive"] }
-smbios-lib = "0.9.1"
-tokio = { version = "1.36.0", features = ["full", "test-util"] }
-serde_json = "1.0.113"
-once_cell = "1.19.0"
-pyo3 = { version = "0.20", features = ["extension-module"] }
-pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
+reqwest = { version = "=0.11.18", features = ["json"] }
+serde = { version = "=1.0.171", features = ["derive"] }
+tokio = { version = "=1.29.1", features = ["full", "test-util"] }
+serde_json = "=1.0.103"
+pyo3 = { version = "=0.19.0", features = ["extension-module"] }
+once_cell = "=1.18.0"
 
 [lib]
 name = "hwlib"
