--- a/client/hwlib/debian/control
+++ b/client/hwlib/debian/control
@@ -2,26 +2,34 @@ Source: hwlib
 Section: rust
 Priority: optional
 Build-Depends: debhelper (>= 12),
-               cargo, 
-               rustc, 
-               python3, 
-               python3-setuptools, 
+               cargo:native,
+               rustc:native,
+               python3-dev,
+               python3-setuptools,
                python3-wheel,
+               python3-pip,
+               pipx,
                libssl-dev,
-               pkg-config
+               pkg-config,
+               librust-serde-derive-1+default-dev,
+               librust-serde-json-1+default-dev,
+               librust-pyo3-0+default-dev,
+               librust-tokio-1+default-dev,
+               librust-tokio-util-0+default-dev,
+               librust-reqwest-0+default-dev,
+               librust-once-cell-1+default-dev
 Maintainer: Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net> 
 Standards-Version: 4.6.1
 Vcs-Git: https://github.com/canonical/hardware-api.git [client/hwlib/src]
 Vcs-Browser: https://github.com/canonical/hardware-api/tree/main/client/hwlib/src
-# X-Cargo-Crate: hilib
 Rules-Requires-Root: no
-
-# FIXME (packages."(name)".section) debcargo auto-generated summary for hwlib-dev is very long, consider overriding
 
 Package: hwlib-dev
 Architecture: any
 Multi-Arch: same
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}
+Depends: ${shlibs:Depends}, 
+         ${misc:Depends}, 
+         ${python3:Depends}
 Provides:
  hwlib+default-dev (= ${binary:Version}),
  hwlib-0-dev (= ${binary:Version}),
