--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -4,6 +4,7 @@ description = "collects and sends hardware information to hwapi to find testing 
 license = "GPL-3.0-only"
 version = "0.1.0"
 edition = "2021"
+authors = []
 
 [package.metadata.deb]
 maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
