--- a/client/hwlib/debian/control
+++ b/client/hwlib/debian/control
@@ -8,9 +8,9 @@ Build-Depends: debhelper (>= 12),
                python3-setuptools,
                python3-wheel,
                python3-pip,
-               pipx,
                libssl-dev,
                pkg-config,
+               patchelf,
                librust-serde-derive-1+default-dev,
                librust-serde-json-1+default-dev,
                librust-pyo3-0+default-dev,
