Create debian source for hwlib (#28)
* Creates debian packaging boilerplate

* Moving the debian dir under client

* Create debian/ dir for hwlib

* Update Cargo.toml

* Remove unused files from client/debian

* Remove client/debian dir

* Removes the output of dh_make, updates .gitignore some

* Adds .cargo-checksum.json in .gitignore

* Removes nocheck, comments out for now autopkg tests, adds once-cell dependency

* Pulls in Nadzeya's rules file edits, pyo3 and maturin dependency, adds some more things in .gitignore

* Update debian/* files

* Update copyright

* Remove cargo-checksum file

* Remove install -Dm755

* Change install loc to hwlib-dev

* Update copyright info

* Update dependencies to match debian packages versions. Remove pyo3-asyncio

* Remove maturin from rules

* Add readme with instructions how to build deb package

* Update README

---------

Co-authored-by: Matias Piipari <matias.piipari@gmail.com>
Co-authored-by: Hook25 <massimiliano.girardi@canonical.com>

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,2 +1,22 @@
+*.tar.*
+*.dsc
+*.build
+*.log
+debhelper-build-stamp
 target
+hwlib/debian/hwlib/
+cargo_home
+.cargo-checksum.json
 __pycache__/
+
+# debian/ source files to ignore
+.debhelper/
+*/debian/files
+*/debian/hwlib-dev.substvars
+*/debian/hwlib-dev
+*/debian/cargo_registry
+*.deb
+*.ddeb
+*.buildinfo
+*.changes
+*.ppa.upload
