--- a/client/hwlib/debian/control
+++ b/client/hwlib/debian/control
@@ -24,20 +24,13 @@ Vcs-Git: https://github.com/canonical/hardware-api.git [client/hwlib/src]
 Vcs-Browser: https://github.com/canonical/hardware-api/tree/main/client/hwlib/src
 Rules-Requires-Root: no
 
-Package: hwlib-dev
+Package: hwlib
 Architecture: any
 Multi-Arch: same
 Depends: ${shlibs:Depends}, 
          ${misc:Depends}, 
          ${python3:Depends}
-Provides:
- hwlib+default-dev (= ${binary:Version}),
- hwlib-0-dev (= ${binary:Version}),
- hwlib-0+default-dev (= ${binary:Version}),
- hwlib-0.1-dev (= ${binary:Version}),
- hwlib-0.1+default-dev (= ${binary:Version}),
- hwlib-0.0.1-dev (= ${binary:Version}),
- hwlib-0.0.1+default-dev (= ${binary:Version})
+Provides: hwlib (= ${binary:Version}),
 Description: Collects and sends hardware information to hardware-api to find testing status of the device model - Rust source code
  This package contains the source for the Rust hwlib crate, packaged by debcargo
  for use with cargo and dh-cargo.
