--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -6,18 +6,30 @@ version = "0.0.1"
 edition = "2021"
 authors = []
 
-[package.metadata.deb]
-maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
-copyright = "Copyright 2024 Canonical Ltd."
-
 [dependencies]
-reqwest = { version = "=0.11.18", features = ["json"] }
-serde = { version = "=1.0.171", features = ["derive"] }
-tokio = { version = "=1.29.1", features = ["full", "test-util"] }
 serde_json = "=1.0.103"
-pyo3 = { version = "=0.19.0", features = ["extension-module"] }
 once_cell = "=1.18.0"
 
 [lib]
 name = "hwlib"
-crate-type = ["cdylib", "rlib"]
+crate-type = [ "cdylib", "rlib",]
+
+[dependencies.reqwest]
+version = "=0.11.18"
+features = [ "json",]
+
+[dependencies.serde]
+version = "=1.0.171"
+features = [ "derive",]
+
+[dependencies.tokio]
+version = "=1.29.1"
+features = [ "full", "test-util",]
+
+[dependencies.pyo3]
+version = "=0.19.0"
+features = [ "extension-module",]
+
+[package.metadata.deb]
+maintainer = "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>"
+copyright = "Copyright 2024 Canonical Ltd."
