Add script for automatically update package version (#36)
* Change package version to 0.0.1

* Add script to update package version

* Change package name to hwlib instead of hwlib-dev

* Specify time in changelog with UTC timezone

* Run CI jobs only if files in the specified dirs got changed

* Update client README

* Remove debian/tests dir

* Update script

* Run the script with version 0.0.1

* Update scripts/update_package_version.py

Co-authored-by: Massimiliano <massigi97@gmail.com>

---------

Co-authored-by: Massimiliano <massigi97@gmail.com>

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,11 +12,12 @@ __pycache__/
 # debian/ source files to ignore
 .debhelper/
 */debian/files
-*/debian/hwlib-dev.substvars
-*/debian/hwlib-dev
+*/debian/hwlib.substvars
+*/debian/hwlib
 */debian/cargo_registry
 *.deb
 *.ddeb
 *.buildinfo
 *.changes
 *.ppa.upload
+hwlib/*.whl
