--- a/client/hwlib/debian/control
+++ b/client/hwlib/debian/control
@@ -19,25 +19,19 @@ Build-Depends: debhelper (>= 12),
                librust-reqwest-0+default-dev,
                librust-once-cell-1+default-dev
 Maintainer: Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net> 
+Uploaders: Nadzeya Hutsko <nadzeya.hutsko@canonical.com>
 Standards-Version: 4.6.1
 Vcs-Git: https://github.com/canonical/hardware-api.git [client/hwlib/src]
 Vcs-Browser: https://github.com/canonical/hardware-api/tree/main/client/hwlib/src
 Rules-Requires-Root: no
 
-Package: hwlib-dev
+Package: hwlib
 Architecture: any
 Multi-Arch: same
 Depends: ${shlibs:Depends}, 
          ${misc:Depends}, 
          ${python3:Depends}
-Provides:
- hwlib+default-dev (= ${binary:Version}),
- hwlib-0-dev (= ${binary:Version}),
- hwlib-0+default-dev (= ${binary:Version}),
- hwlib-0.1-dev (= ${binary:Version}),
- hwlib-0.1+default-dev (= ${binary:Version}),
- hwlib-0.1.0-dev (= ${binary:Version}),
- hwlib-0.1.0+default-dev (= ${binary:Version})
+Provides: hwlib (= ${binary:Version}),
 Description: Collects and sends hardware information to hardware-api to find testing status of the device model - Rust source code
  This package contains the source for the Rust hwlib crate, packaged by debcargo
  for use with cargo and dh-cargo.
