--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -21,8 +21,8 @@ jobs:
     steps:
       - name: Checkout repo & submodules
         uses: actions/checkout@v4
-      - name: Install virtualenv
-        run: sudo apt install -y python3-virtualenv
+        with:
+          submodules: "true"
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
         with:
@@ -36,14 +36,11 @@ jobs:
           sudo curl -L  -L $COMPOSE_URL -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           echo `docker-compose --version`
-
       - name: Set dockerhub registry mirror at /etc/docker/daemon.json
         run: |
           echo '{"registry-mirrors": ["https://github-runner-dockerhub-cache.canonical.com:5000"]}' | sudo tee /etc/docker/daemon.json
-
       - name: Restart dockerd
         run: sudo systemctl restart docker
-
       - name: Run tests with docker-compose
         run: |
           docker-compose up --attach-dependencies --abort-on-container-exit hwapi-test
