--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DB_URL=sqlite:////home/app/data/hwapi.db
+      - DB_URL=sqlite:////home/app/data/hwapi-dev.db
 
   hwapi-test:
     build:
@@ -22,13 +22,12 @@ services:
       bash -c '
         python scripts/seed_db.py
         black --check hwapi/ scripts/ tests/
-        ruff check hwapi/ scripts/ tests/
+        ruff check hwapi/ scripts/ tests/ --no-cache
         mypy hwapi/ scripts/ tests/
         pytest'
     working_dir: /home/app
-    volumes:
-      - .:/home/app
-      - ./data:/home/app/data
+    tmpfs:
+      - /home/app/data
     ports:
       - "8080:8080"
     environment:
@@ -40,7 +39,6 @@ services:
       dockerfile: Dockerfile
     working_dir: /home/app
     volumes:
-      - .:/home/app
       - ./data:/home/app/data
     ports:
       - "8080:8080"
