--- a/.github/workflows/publish_server.yml
+++ b/.github/workflows/publish_server.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build-and-push-image:
-    runs-on: [self-hosted, linux]
+    runs-on: [self-hosted, linux, jammy, x64]
     permissions:
       contents: read
       packages: write
