--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   lint-and-test:
-    runs-on: [self-hosted, linux, large]
+    runs-on: [self-hosted, linux, large, jammy, x64]
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
@@ -36,7 +36,7 @@ jobs:
         run: cargo test -- --test-threads=1
 
   py-bindings-test:
-    runs-on: [self-hosted, linux, large]
+    runs-on: [self-hosted, linux, large, jammy, x64]
     needs: lint-and-test
     steps:
       - uses: actions/checkout@v4
