--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -20,10 +20,10 @@ services:
       dockerfile: Dockerfile
     command: >
       bash -c '
-        python scripts/seed_db.py
-        black --check hwapi/ scripts/ tests/
-        ruff check hwapi/ scripts/ tests/ --no-cache
-        mypy hwapi/ scripts/ tests/
+        python scripts/seed_db.py &&
+        black --check hwapi/ scripts/ tests/ &&
+        ruff check hwapi/ scripts/ tests/ --no-cache &&
+        mypy hwapi/ scripts/ tests/ &&
         pytest tests/ -vv'
     working_dir: /home/app
     tmpfs:
