--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,9 +12,4 @@ RUN pip3 install poetry && \
 
 COPY . .
 
-ENV DB_PATH /home/app/data/hwapi.db
-RUN python data/init_db.py
-
-VOLUME ["/app/data"]
-
-CMD ["uvicorn", "hwapi.main:app", "--host", "0.0.0.0", "--port", "8080", "--reload"]
+CMD ["uvicorn", "hwapi.main:app", "--host", "0.0.0.0", "--port", "8080"]
