--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -20,6 +20,12 @@ mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
 pre-commit = "^3.6.0"
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.1.1"
+httpx = "^0.27.0"
+sqlalchemy-utils = "^0.41.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
