--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "8080:8080"
     environment:
       - DB_URL=sqlite:////home/app/data/hwapi-dev.db
+      - C3_URL=http://localhost:8001
 
   hwapi-test:
     build:
@@ -43,3 +44,4 @@ services:
       - "8080:8080"
     environment:
       - DB_URL=sqlite:////home/app/data/hwapi.db
+      - C3_URL=https://certification.canonical.com
