--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = "^0.29.0"
 sqlalchemy = "^2.0.25"
 pydantic = "^2.5.3"
 pyyaml = "^6.0.1"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
@@ -19,6 +20,7 @@ ruff = "^0.3.0"
 mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
 pre-commit = "^3.6.0"
+types-requests = "^2.31.0.20240406"
 
 
 [tool.poetry.group.test.dependencies]
