--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - DB_URL=sqlite:////home/app/data/hwapi-dev.db
       - C3_URL=http://172.17.0.1:8001
+      - INTERNAL_HOSTS=*
 
   hwapi-test:
     build:
