--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.110.0"
+fastapi = "0.110.1"
 uvicorn = "^0.29.0"
 sqlalchemy = "^2.0.25"
 pydantic = "^2.5.3"
 pyyaml = "^6.0.1"
 requests = "^2.31.0"
+starlette = "0.37.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
