--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "8080:8080"
     environment:
       - DB_URL=sqlite:////home/app/data/hwapi-dev.db
-      - C3_URL=http://172.17.0.1:8001
+      - C3_URL=https://certification.staging.canonical.com
       - INTERNAL_HOSTS=*
 
   hwapi-test:
@@ -33,6 +33,7 @@ services:
       - "8080:8080"
     environment:
       - TEST_DB_URL=sqlite:////home/app/data/test-hwapi.db
+      - INTERNAL_HOSTS=testclient
 
   hwapi:
     build:
