--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -28,6 +28,7 @@ types-requests = "^2.31.0.20240406"
 pytest = "^8.1.1"
 httpx = "^0.27.0"
 sqlalchemy-utils = "^0.41.2"
+requests-mock = "^1.12.1"
 
 [build-system]
 requires = ["poetry-core"]
