Drop the importer endpoints and import data during the build time

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,4 +12,12 @@ RUN pip3 install poetry && \
 
 COPY . .
 
+ARG DB_URL
+ENV DB_URL=$DB_URL
+ARG C3_URL
+ENV C3_URL=$C3_URL
+
+ARG SCRIPT_NAME=import_from_c3.py
+RUN if [ -n "$SCRIPT_NAME" ]; then python scripts/$SCRIPT_NAME; fi
+
 CMD ["uvicorn", "hwapi.main:app", "--host", "0.0.0.0", "--port", "8080"]
