--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: hwctl
 base: core22
-version: "0.1" # rewritten with the help of `adopt-info` below
+version: "0.0"
 adopt-info: hwctl
 summary: Hardware API client
 description: Canonical Certified Hardware API client
@@ -23,13 +23,15 @@ parts:
   hwctl:
     plugin: rust
     source: https://github.com/canonical/hardware-api.git
+    source-branch: main
     source-type: git
     build-packages:
       - pkg-config
       - libssl-dev
     override-pull: |
       craftctl default
-      # uncomment once there are tags that correspond to version
       last_committed_tag="$(git describe --tags --abbrev=0)"
       last_committed_tag_ver="$(echo ${last_committed_tag} | sed 's/v//')"
+
       craftctl set version="$(git describe --tags | sed 's/v//')"
+      craftctl set commit="$(git rev-parse HEAD)"
