Allow users to use the local DB instead of seeding the data

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.10
 
-WORKDIR /home/app
+WORKDIR /home/code
 EXPOSE 8080
 
-ENV PYTHONPATH=/home/app
+ENV PYTHONPATH=/home/code
 COPY poetry.lock .
 COPY pyproject.toml .
 RUN pip3 install poetry && \
@@ -12,12 +12,15 @@ RUN pip3 install poetry && \
 
 COPY . .
 
-ARG DB_URL
+ARG IMPORT_TOOL_PATH=./scripts/import_from_c3.py
+ARG DB_URL=sqlite:////home/code/hwapi.db
 ENV DB_URL=$DB_URL
-ARG C3_URL
+ARG C3_URL=https://certification.canonical.com
 ENV C3_URL=$C3_URL
 
-ARG DATA_LOADING_SCRIPT_FILE=import_from_c3.py
-RUN if [ -n "$DATA_LOADING_SCRIPT_FILE" ]; then python scripts/$DATA_LOADING_SCRIPT_FILE; fi
+RUN if [ -x $IMPORT_TOOL_PATH ]; then \
+        python3 $IMPORT_TOOL_PATH; \
+    fi
+
 
 CMD ["uvicorn", "hwapi.main:app", "--host", "0.0.0.0", "--port", "8080"]
