Fix: remove top key from the hwlib response body

--- a/client/hwlib/tox.ini
+++ b/client/hwlib/tox.ini
@@ -6,6 +6,7 @@ skipsdist = true
 [testenv]
 deps =
     black
+    ruff
     pytest
     pytest-asyncio
     maturin
@@ -13,4 +14,5 @@ commands_pre =
     {envbindir}/maturin develop
 commands =
     {envbindir}/python -m black --check pytests/
+    {envbindir}/python -m ruff check pytests/
     {envbindir}/python -m pytest pytests/
