--- a/.github/workflows/publish_server.yml
+++ b/.github/workflows/publish_server.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Upload charm to charmhub
         uses: canonical/charming-actions/upload-charm@2.4.0
         with:
-          charm-path: "./server/charm"
+          charm-path: "server/charm"
           credentials: "${{ secrets.CHARMHUB_TOKEN }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           upload-image: "true"
